--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,8 +9,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/JumpTest_P.JumpTest_P
-GameDefaultMap=/Game/Maps/JumpTest_P.JumpTest_P
+EditorStartupMap=/Game/Maps/TestLevelOne.TestLevelOne
+GameDefaultMap=/Game/Maps/TestLevelOne.TestLevelOne
 GlobalDefaultGameMode=/Game/Blueprints/BP_TestGameMode.BP_TestGameMode_C
 
 [/Script/Engine.CollisionProfile]
@@ -90,5 +90,3 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType2,Name="FleshVulnerable")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
-
