--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,8 +9,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/TestLevelOne.TestLevelOne
-GameDefaultMap=/Game/Maps/TestLevelOne.TestLevelOne
+EditorStartupMap=/Game/Maps/Blockout_P.Blockout_P
+GameDefaultMap=/Game/Maps/Blockout_P.Blockout_P
 GlobalDefaultGameMode=/Game/Blueprints/BP_TestGameMode.BP_TestGameMode_C
 
 [/Script/Engine.CollisionProfile]
